--- a/platforms/birdfeather/src/index.css
+++ b/platforms/birdfeather/src/index.css
@@ -7,14 +7,14 @@
   They apply unless a specific data-theme attribute is set.
 */
 :root {
-  --color-primary: rgb(113 113 122);
-  /* zinc-500 equivalent RGB */
-  --color-secondary: rgb(161 161 170);
-  /* zinc-400 equivalent RGB */
-  --color-accent: rgb(35, 35, 35);
-  /* indigo-500 equivalent RGB */
-  --color-text-default: rgb(36, 36, 36);
-  /* zinc-900 equivalent RGB */
+  --color-primary: rgb(244, 244, 244);
+  /* zinc-600 equivalent RGB */
+  --color-secondary: rgb(212 212 216);
+  /* zinc-300 equivalent RGB */
+  --color-accent: rgb(29, 1, 214);
+  /* indigo-600 equivalent RGB */
+  --color-text-default: rgb(39 39 42);
+  /* zinc-800 equivalent RGB */
   --color-background-default: rgb(250 250 250);
 }
 
@@ -31,26 +31,13 @@
   --color-background-default: rgb(39 39 42);
 }
 
-/* Light Theme */
-[data-theme='light'] {
-  --color-primary: rgb(244, 244, 244);
-  /* zinc-600 equivalent RGB */
-  --color-secondary: rgb(212 212 216);
-  /* zinc-300 equivalent RGB */
-  --color-accent: rgb(29, 1, 214);
-  /* indigo-600 equivalent RGB */
-  --color-text-default: rgb(39 39 42);
-  /* zinc-800 equivalent RGB */
-  --color-background-default: rgb(250 250 250);
-}
-
 /* Fancy Theme - Indigo & Purple */
 [data-theme='fancy'] {
   --color-primary: rgb(221, 70, 229);
   /* indigo-600 equivalent RGB */
   --color-secondary: rgb(147 51 234);
   /* indigo-600 equivalent RGB */
-  --color-accent: rgb(147 51 234);
+  --color-accent: rgba(146, 51, 234, 0.326);
   /* purple-400 equivalent RGB */
   --color-text-default: rgb(244 244 245);
   /* zinc-100 equivalent RGB */
